sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/in-seek-sort-elision__eqp-subquery-group-by-elided.snap
---
source: in-seek-sort-elision.sqltest
expression: SELECT k, count(*) FROM t WHERE k IN (SELECT y FROM u) GROUP BY k;
info:
  statement_type: SELECT
  tables:
  - t
  - u
  setup_blocks:
  - asc_schema
  database: ':memory:'
---
QUERY PLAN
|--LIST SUBQUERY 1
|  `--SCAN u
`--SEARCH t USING INDEX t_kj (k=?)
