sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/in-seek-sort-elision__eqp-trailing-desc-column-asked-ascending-not-elided.snap
---
source: in-seek-sort-elision.sqltest
expression: SELECT k, j FROM t WHERE k IN (3, 1, 2) ORDER BY k, j;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - trailing_desc_schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH t USING INDEX t_kj (k=?)
`--USE SORTER FOR ORDER BY
